# corp_dannie_rag

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  chunker.py  config.py  embedder.py  generator.py  hybrid_retriever.py  llm.py  main.py  prompts.py  retriever.py
data/raw/: datasets.json
doc/: 00_project_idea.md  DATA.md  conventions.md  tasklist.md  vision.md  workflow.md
eval/: doc_conditions.json  eval_queries.json
homework/: IMPROVEMENTS.md  SUBMISSION.md
scripts/: build_index.py  check_generator.py  check_retrieval.py  evaluate.py  ingest.py  prepare_datasets.py
tests/: test_chunking.py  test_eval.py  test_generation.py  test_hybrid.py  test_retrieval.py
