[project]
name = "rag-hw"
version = "0.1.0"
description = "RAG на русскоязычных данных с Kaggle: TF-IDF + семантика (гибрид) + LLM, с источниками"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "scikit-learn",
    "numpy",
    "scipy",
    "pandas",
    "tqdm",
    "sentence-transformers",
    "openai",
    "python-dotenv",
    "kaggle",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
